tests/ui/async-await/dont-suggest-missing-await.stderr
error[E0308]: mismatched types
  --> $DIR/dont-suggest-missing-await.rs:14:18
   |
LL |         take_u32(x)
   |         -------- ^ expected `u32`, found opaque type
   |         |
   |         arguments to this function are incorrect
   |
   = note:     expected type `u32`
           found opaque type `impl Future<Output = u32>`
note: function defined here
  --> $DIR/dont-suggest-missing-await.rs:5:4
   |
LL | fn take_u32(x: u32) {}
   |    ^^^^^^^^ ------
help: consider `await`ing on the `Future`
   |
LL |         take_u32(x.await)
   |                   ++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
